Fix missing space between consecutive legend images

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/legend.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/legend.scss
@@ -1,3 +1,4 @@
 .mb-element-legend img {
   max-width: 100%;
+  margin-bottom: 0.5em;
 }
